# pam-ssh-qrauth

./: .gitignore  README.md
pam_qrapp_auth/: .gitignore  Makefile.am  build.sh  configure.ac
pam_qrapp_auth/src/: gen_qrcode.c  gen_qrcode.h  pam_qrapp_auth.c  pam_qrapp_auth.h  string_crypt.c  string_crypt.h  utils.c  utils.h  websocket_client.c  websocket_client.h
ssh-qrapp-websocket/: .gitignore  handler.js  package.json  serverless.yml
ssh-qrapp-websocket/layer/nodejs/: package.json
ssh-qrauth-server/: .gitignore  handler.js  serverless.yml
ssh-qrauth-server/layer/nodejs/: package.json
ssh_qrauth_app/: .gitignore  App.js  app.json  package.json
ssh_qrauth_app/Components/: AuthQRCode.js
ssh_qrauth_app/android/: settings.gradle
ssh_qrauth_app/android/app/: _BUCK  build.gradle
ssh_qrauth_app/android/app/src/debug/java/com/ssh_qrauth_app/: ReactNativeFlipper.java
ssh_qrauth_app/android/app/src/main/: AndroidManifest.xml
ssh_qrauth_app/android/app/src/main/java/com/ssh_qrauth_app/: MainActivity.java  MainApplication.java
ssh_qrauth_app/android/app/src/main/res/values/: strings.xml
ssh_qrauth_app/ios/: Podfile
ssh_qrauth_app/ios/ssh_qrauth_app/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
ssh_qrauth_app/ios/ssh_qrauth_app.xcodeproj/: project.pbxproj
ssh_qrauth_app/ios/ssh_qrauth_app.xcodeproj/xcshareddata/xcschemes/: ssh_qrauth_app.xcscheme
ssh_qrauth_app/ios/ssh_qrauth_appTests/: ssh_qrauth_appTests.m
